<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/option_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="decreaseQuantity"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/quantity_text_view"
            android:textColor="#424242"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="increaseQuantity"
            android:text="@string/plus" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:padding="1dp"
        android:textAlignment="textStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cash_tag"
            android:textSize="24sp" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coffee_imageView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/cup1"
            android:contentDescription="@string/coffee_description"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_price"
            android:textSize="34sp"
            android:padding="14dp"
            android:layout_gravity="bottom"
            android:textColor="#ff0"/>

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="submitOrder"
        android:text="@string/order_button_text"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_weight="0.1"/>
</LinearLayout>
